--- a/gamepage.html
+++ b/gamepage.html
@@ -113,22 +113,22 @@
 
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0 list-group list-group-horizontal">
         <li class="nav-item">
-          <a class="nav-link fs-5" href="index.html" aria-label="Homepage">
+          <a class="nav-link fs-5" href="index.html" aria-label="Home page">
             Home
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fs-5" href="content.html" aria-label="A sample content page">
+          <a class="nav-link fs-5" href="learn.html" aria-label="Learn page">
             Learn
           </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link fs-5" href="exocomics.html" aria-label="A system message page">
+            <a class="nav-link fs-5" href="exocomics.html" aria-label="Exocomic page">
               ExoComics
             </a>
           </li>
         <li class="nav-item">
-          <a class="nav-link fs-5" href="gamepage.html" aria-label="A system message page">
+          <a class="nav-link fs-5" href="gamepage.html" aria-label="Gamex page">
             Gamex
           </a>
         </li>
